--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,8 +5,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  download:
-    name: Download 
+  build:
+    name: Build 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
