--- a/.github/workflows/tweet.yaml
+++ b/.github/workflows/tweet.yaml
@@ -29,18 +29,18 @@ jobs:
         if: ${{steps.find-tweet.outputs.result}}
         run: echo "${{steps.find-tweet.outputs.tweet}}"
 
-#      - name: Tweet
-#        uses: ethomson/send-tweet-action@v1
-#        with:
-#          if: ${{steps.find-tweet.outputs.result}}
-#          status: "${{steps.find-tweet.outputs.result}}"
-#          consumer-key: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
-#          consumer-secret: ${{ secrets.TWITTER_CONSUMER_API_SECRET }}
-#          access-token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-#          access-token-secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+      - name: Tweet
+        uses: ethomson/send-tweet-action@v1
+        with:
+          if: ${{steps.find-tweet.outputs.tweet}}
+          status: "${{steps.find-tweet.outputs.tweet}}"
+          consumer-key: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
+          consumer-secret: ${{ secrets.TWITTER_CONSUMER_API_SECRET }}
+          access-token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          access-token-secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
 
       - name: Commit
         uses: ./.github/actions/commit
-        if: ${{ steps.find-tweet.outputs.tweet }}
+        if: ${{steps.find-tweet.outputs.tweet}}
         with:
             message: Tweeted episode
