--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,13 +12,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install Python
-        uses: actions/setup-python@v2
+      - name: Install Python, pipenv and Pipfile packages
+        uses: palewire/install-python-pipenv-pipfile@v1
         with:
           python-version: 3.8
-
-      - name: Install dependencies
-        uses: ./.github/actions/install-pipenv 
       
       - name: Run
         run: make freeze
